# stealthmon

./: Cargo.toml  README.md  build.rs  test_hwnd.rs
.github/workflows/: release.yml
assets/: dashboard.html
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
src/: main.rs  updater.rs
src/collectors/: input.rs  mod.rs  mouse_distance.rs  window.rs
src/db/: mod.rs
src/server/: api.rs  dashboard.rs  mod.rs
web-logger-extension/: README.md  manifest.json
web-logger-extension/src/: background.js  dashboard.html  dashboard.js  popup.html  popup.js  shared-db.js  styles.css
